@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST go1.4.1.src.tar.gz 10921282 SHA256 3d9bb27ad4be51f60dc44f3d0026036ef07142797b1df1b5ae816277e6c31bb3 SHA512 47cbd67cdca8d67e8d09fee6d9a9fd5ddfa65f59413bd583c83b27c598f7b1b23e51e894888c10202bada560a16758eb847bff963d77726724aefecaea5cf644 WHIRLPOOL 0e63fce9674204c79dafad2daea1b8e097370ae7a5b5ee0e463235925cec4a3e74fa0980de8fe6fa1adbc072c2921cef494c5eafe251fe4e26a0f1586bd217e0
+DIST go1.4.2.src.tar.gz 10921896 SHA256 299a6fd8f8adfdce15bc06bde926e7b252ae8e24dd5b16b7d8791ed79e7b5e9b SHA512 cda1a29d4418875dffaf3324004ddae8e1bbb573f7668e6e0c03d8b61284f4db7fca244c181f2859f8ccdd3db6391fb21e0d98a1a9fc15096c15883249d48a9c WHIRLPOOL d06c27f6ff3a6499a6c7cb3c5eccd53eb588896c4d837e1fe9855c22ee3caa5cc48fd68cbeceff105b7c47fafbbf0eb3dc28ee3af7196692c5bf18511c6760ef
 EBUILD go-bootstrap-1.4.1.ebuild 2066 SHA256 5c5ff9487daf58cb540674f4f1251bad65153d90bd5fa1797dd81b8a9d8e7db4 SHA512 b3c9e44ea9cdc43fa1376642182b9164792f11dcc75661e330a439384344a334c62a2e5e049839c1d5b6a4e2ce008154dc93ed1cc97bcd11267f1eb78f03e629 WHIRLPOOL 780b64ce3a0f722cd1599756d7708a029cf6ba23617763bb690216d56a9fd134d9d1d2200818cb3965c7ac35e7abe638af8fc56f76d99b06e24f0061345fd6f7
-MISC ChangeLog 557 SHA256 fc8e308a7226f0e211b588cb8ae4850646f95e452b37d7a195d55bddcb2b70e0 SHA512 2633652f16d0d495ad8fb4d8081c2440c8e24988715d3c7be447a7b7f32db93422303fe12074a741905c82b0b0d903836bf8d2d4dc31bb3957d8f3fbc0560986 WHIRLPOOL 92af527ae05c5df8d4a43ccac35acd128ddf6f15633ccb7c800cc3e4b6d5c521376486543798dbb4fdf715e240e03ba9a25c2f57f921687e762d4dd2e1fabde1
+EBUILD go-bootstrap-1.4.2.ebuild 2066 SHA256 91ed737ba74a5fca23420812f1f62a636b02542b0630a7606b6fb5289865c2c7 SHA512 eea3725f87e88f66827f0f794aa2945d37fed5117503c756077613fdd86306a285e7b008b5fb2be899a004dd745c1b688b9a8343f2d2c32b8d6486ae3d7dc09e WHIRLPOOL cdc2eab3371b3bed591f31c187b508cd4035af2cdacbb69893f2d16d2cc8638b3fe766218a0ac39f5ecc5157f198e1a719d87353757e07052c52d89642fd6a78
+MISC ChangeLog 686 SHA256 da1550391b5cf7590987efdb8a40e2b94cb831ed2ecf44667d91d079c3e41ab1 SHA512 0215a663d9aa55a5fa3082b33e106b75d1ffc87a8677dfd8dea6e313084df6878d5b55d2438809d3d2bd459efc5a2c5d645fefad859dff98a09692a95cdaa396 WHIRLPOOL 40b583494fee7f46ec1a7f2dc220558d72c857d7984a758d0fca31f95d06f8a7010f33a80224ba7bc8364e874bd7bb2ddb9dcc82016e5f14338dfe055c3f5b44
 MISC metadata.xml 467 SHA256 3f0e04fc62e643abd20c541d2739faa9ac03a72add79b873ad5e705dbb154820 SHA512 ce1062602cc5c6391154c9ea7d0c2c4b68e91a904fae059867a77e54d74d2e4a648176d12606ab558a509c3a3dc45b533258ae7ba9b15fa138d5faf6a4d8069b WHIRLPOOL 5fac459140bc77aa26d20c57103be488e690d04ac9c1868fbb2314a4ec84a06b9a5ded3a4ee5860c74d777e9f5cf450da4e5d22b94cb7841e7ba7dda0c741643
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlS9zgcACgkQblQW9DDEZTjZGACgsDs0N7u4SB+C4AR50PW9R1k6
-LbQAoKRFSZIVgY6uKUVdidtMIPYX4NkE
-=6lPq
+iEYEAREIAAYFAlUIzBkACgkQblQW9DDEZTj1tgCgkOZUl162QKS3mbqJWevqDczb
+5aMAnjpvMl/rsnq15bsxnQnD/qkb0i6S
+=vjg4
 -----END PGP SIGNATURE-----
