@@ -2,14 +2,17 @@
 Hash: SHA256
 
 DIST elasticsearch-1.4.2.tar.gz 27734207 SHA256 31dd6c049745f7dac201f94852b778b0841d6869d358fd80d4c897d0bf73b53c SHA512 b82e644b0b81489ce0d4fc72ca0efa3545c55c4d947faec2537035d440be83bac0f794f1a2863d87649e36f87d250c1f4e46ae57053b50948f47f9ff2a3bf6b6 WHIRLPOOL ac40778a999bc92230547b1405f259b7d348983767a87c71e18ed9ef45367ebf0b5b0517ef57bd423fa47ce4387e982aa7ee4a4ec9b2be75a4771e8d737f0cc5
+DIST elasticsearch-1.4.4.tar.gz 27900004 SHA256 a3158d474e68520664debaea304be22327fc7ee1f410e0bfd940747b413e8586 SHA512 afc24c5d778d346e24c656e040fb7d0036e16ae42b35ca4f97b2e4d31dc815467ae5462f922ea5222307acf0fa0579f6cd38c603bc996c1f4ba723aa6a2b01ed WHIRLPOOL 37a1a057539ae29525a78fa51f3d19f403e389129e54054edfa1bbd08d12bdbb88acb4e879b6795aa63d583fd70eedefcae5b13b6bf1a7c8314e3aafa49e2b33
 DIST elasticsearch-curator-2.1.2.tar.gz 35706 SHA256 93185f57e4fcd84970b78936271c3ddcba69c54d9a799acafe7d16483134cce0 SHA512 4bc4f74ab7d710173f173d47ad5e8c8918267bbc888a2b1b301e799747f73375b159671940cf7d3cc62361adbb320bc3e772d149eb7ff227d4893788810946f1 WHIRLPOOL 156e92a0a5fa4797651d1c066b955304b082edcda815784c5ddb5a025c93f9b4f222f15e5d7ce74e4740bd1c3ab5e67fe21e651186e0062ff3f0e418b0390b09
+DIST elasticsearch-curator-3.0.0.tar.gz 55418 SHA256 72ec58f15344649dbfec54c80731e6b0b80bb3c0575061ca75580d49f9982fe0 SHA512 acf2a86af682118a0c5ece1d8b557e6b43ada667f8c172cd7d8f66280b07e5e79ec6da5a674b338348fc1e94a6d2bcffd8e1ff61f7bd9ef43cd6458eb371c50a WHIRLPOOL bab3479082209c1efea77b6385a49782617143fd28c6956c13cbc3c1d36256c3d45c316abb3b6982e5822b811ac69a18cfcaa5dc4ec4e3634b155a241d0cb0f4
 EBUILD elasticsearch-curator-2.1.2.ebuild 2185 SHA256 136c8ba99c0840b6fa02c56ce7bc0f1691e51a127bff7069f0c71781c6a2ed1e SHA512 4e9a43ae7199b6616907d3d407de5e4c3a2f55800de6a7e729e5108b38f97f3d0fd00b3404b794ebdb0e4178245d14895bcbc7174dbddc116af7b09e1a1e5460 WHIRLPOOL e3e5135dacc174a56b4587db7c5f8e62dbd69c07d3ca00ae57fbe53522ad85c1a39e3dd538622edcc8252d5faed3821ac565d9305a9834452193657cb34c8c48
-MISC ChangeLog 445 SHA256 c8f4a25b1a2c54a300d5089859714b8ab456ffe7d6892105b80bcc27f3de83de SHA512 758f1bc9cadfef78dbf175e31058da5fc60744719113d69e4f84d73fe4662882d8d69188d7e3756ebe2129e742830db7a0dcc4ebfb9da8fed04d7d174831d320 WHIRLPOOL f5433223014530c8d06757be7ef7edae7b2dd689b17237f6c863dacaf9b9a48a1dadead68ab9f0d4b2a47d0f2838e5d2e9fa3d5889ca779b25429a11bfb132a4
+EBUILD elasticsearch-curator-3.0.0.ebuild 2612 SHA256 a380914e441aae4966b082583a307f062be2bc4e732e3fe98834811de0cc1e8c SHA512 b8bae5a6790b3b206c90389fb9bcba4b39e0accd85efb95d5dc9dd35f7f84ba3542b5580c11adde65f40a45afc7f05a9838855cc8ab829aa42ad16f1f7bbc287 WHIRLPOOL 4a8938af9c34b87d9e5f6ad030ed166850add0af22852d62b016cb429f850fa9093864463bfd41e1756feab4e6b336d3bf4f914755c68d10f314f8e19dce3c6b
+MISC ChangeLog 668 SHA256 51b78001c57248f5c8c1463363bd46b3b87ee678bc0f63074a95a1aadfff2920 SHA512 7e9730c5c590a0b1a3fc9bdf04e31cc6645ee18844a1df40d9c8da6c83cb93f878d9b93b8aeca77cca7ec44c001be99cccc1b7561469540e1950d0bcf2bbde16 WHIRLPOOL 11d79b55a0c6db83fae9b1d510517e7ef45c57ba789e1347a6a55c9b013373c8417ed019ae93d8c5e6e03eadc7e6251538a26fd6e35b71f2441ccce8b1944416
 MISC metadata.xml 460 SHA256 aca4c01631add79d4a3eee43e16a261c8527dd0a588b83d3525fad586d9ed93e SHA512 2c82e3987b82888689d7e003e6780cd39f944832e8c6647dd24ff79460f5a89f0f6d05cb17835e935878f9409fd4da43ff7159bc96b97d22434cdefa37f9d538 WHIRLPOOL 5be5aedf709140743af538dc846feea66f80c614e0e4d7adf615e645ce7f0f6223030d7f3716fd2a5304e5db736f7eb5df3c71a13e1b1baef5bec8014206217a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTjTJcACgkQso7CE7gHKw2AKgCffQGyWaYyJ6aKKDCC3vy1hJCv
-dN4AoMYtuwhr9J2qQcT2GT/E3c9LqK8Y
-=yqqg
+iEYEAREIAAYFAlUIytYACgkQso7CE7gHKw3UuQCgyJCnYSQ+huVe8+PuuCQuR1nt
+JnAAoMuxtEeArUVWUvze4lpo+E2MbFY+
+=dUTx
 -----END PGP SIGNATURE-----
