@@ -1,0 +1,10 @@
+DEFINED_PHASES=compile install postinst prepare test
+DESCRIPTION=Version of go compiler used for bootstrapping
+EAPI=5
+HOMEPAGE=http://www.golang.org
+KEYWORDS=-* ~amd64 ~arm ~x86 ~amd64-fbsd ~x86-fbsd ~x64-macos ~x86-macos
+LICENSE=BSD
+SLOT=0
+SRC_URI=https://storage.googleapis.com/golang/go1.4.2.src.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
+_md5_=e3c6f52a6ddcbaed7a0d6856e7136727
