@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/elasticsearch-curator
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/elasticsearch-curator/ChangeLog,v 1.1 2015/02/17 14:13:27 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/elasticsearch-curator/ChangeLog,v 1.2 2015/03/18 00:45:56 idella4 Exp $
+
+*elasticsearch-curator-3.0.0 (18 Mar 2015)
+
+  18 Mar 2015; Ian Delaney <idella4@gentoo.org>
+  +elasticsearch-curator-3.0.0.ebuild:
+  bump; final form run tested, minor touches made to final attachment, fixes bug
+  #542828
 
 *elasticsearch-curator-2.1.2 (17 Feb 2015)
 
