@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/go-bootstrap
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/go-bootstrap/ChangeLog,v 1.1 2015/01/20 03:39:35 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/go-bootstrap/ChangeLog,v 1.2 2015/03/18 00:51:29 williamh Exp $
+
+*go-bootstrap-1.4.2 (18 Mar 2015)
+
+  18 Mar 2015; William Hubbs <williamh@gentoo.org> +go-bootstrap-1.4.2.ebuild:
+  version bump
 
 *go-bootstrap-1.4.1 (20 Jan 2015)
 
@@ -10,4 +15,3 @@
   go-bootstrap is intended only as a build time dependency used to build
   newer versions of go.
   See https://golang.org/s/go15bootstrap for how this works.
-
